--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/VladimirSh6892/if-js/issues"
   },
-  "homepage": "https://github.com/VladimirSh6892/if-js#readme"
+  "homepage": "https://github.com/VladimirSh6892/if-js#readme",
+  "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  }
 }
