--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint main.js"
   },
   "repository": {
@@ -24,8 +24,8 @@
     "husky": "^4.3.8"
   },
   "husky": {
-  "hooks": {
-  "pre-commit": "npm run lint"
-  }
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
